--- a/portfolio.html
+++ b/portfolio.html
@@ -106,15 +106,15 @@
                <!--examples section-->
                <ul class="pattern-list">
                   <li class="pattern-list__item">
-                     <a class="pattern-list__link" href="">
-                        <div class="pattern-list__thumb">
+                     <a class="product-link" href="">
+                        <div class="product-link__thumb">
                            <img
                               src="./images/example1.jpg"
                               alt="laptop monitor"
                               width="370"
                            />
-                           <div class="pattern-list__overlay">
-                              <p class="pattern-list__overlay-text">
+                           <div class="product-link__overlay">
+                              <p class="product-link__overlay-text">
                                  Технокряк это современная площадка
                                  распространения коронавируса. Компании
                                  используют эту платформу для цифрового шпионажа
@@ -122,22 +122,22 @@
                               </p>
                            </div>
                         </div>
-                        <div class="pattern-list__description">
-                           <h3 class="pattern-list__project">Технокряк</h3>
-                           <p class="pattern-list__product">Веб-сайт</p>
+                        <div class="product-link__description">
+                           <h3 class="product-link__project">Технокряк</h3>
+                           <p class="product-link__article">Веб-сайт</p>
                         </div>
                      </a>
                   </li>
                   <li class="pattern-list__item">
-                     <a class="pattern-list__link" href="">
-                        <div class="pattern-list__thumb">
+                     <a class="product-link" href="">
+                        <div class="product-link__thumb">
                            <img
                               src="./images/example2.jpg"
                               alt="bascketball poster"
                               width="370"
                            />
-                           <div class="pattern-list__overlay">
-                              <p class="pattern-list__overlay-text">
+                           <div class="product-link__overlay">
+                              <p class="product-link__overlay-text">
                                  Технокряк это современная площадка
                                  распространения коронавируса. Компании
                                  используют эту платформу для цифрового шпионажа
@@ -145,24 +145,24 @@
                               </p>
                            </div>
                         </div>
-                        <div class="pattern-list__description">
-                           <h3 class="pattern-list__project">
+                        <div class="product-link__description">
+                           <h3 class="product-link__project">
                               Постер New Orlean vs Golden Star
                            </h3>
-                           <p class="pattern-list__product">Дизайн</p>
+                           <p class="product-link__article">Дизайн</p>
                         </div>
                      </a>
                   </li>
                   <li class="pattern-list__item">
-                     <a class="pattern-list__link" href="">
-                        <div class="pattern-list__thumb">
+                     <a class="product-link" href="">
+                        <div class="product-link__thumb">
                            <img
                               src="./images/example3.jpg"
                               alt="seafood restaurant"
                               width="370"
                            />
-                           <div class="pattern-list__overlay">
-                              <p class="pattern-list__overlay-text">
+                           <div class="product-link__overlay">
+                              <p class="product-link__overlay-text">
                                  Технокряк это современная площадка
                                  распространения коронавируса. Компании
                                  используют эту платформу для цифрового шпионажа
@@ -170,24 +170,24 @@
                               </p>
                            </div>
                         </div>
-                        <div class="pattern-list__description">
-                           <h3 class="pattern-list__project">
+                        <div class="product-link__description">
+                           <h3 class="product-link__project">
                               Ресторан Seafood
                            </h3>
-                           <p class="pattern-list__product">Приложение</p>
+                           <p class="product-link__article">Приложение</p>
                         </div>
                      </a>
                   </li>
                   <li class="pattern-list__item">
-                     <a class="pattern-list__link" href="">
-                        <div class="pattern-list__thumb">
+                     <a class="product-link" href="">
+                        <div class="product-link__thumb">
                            <img
                               src="./images/example4.jpg"
                               alt="headphone"
                               width="370"
                            />
-                           <div class="pattern-list__overlay">
-                              <p class="pattern-list__overlay-text">
+                           <div class="product-link__overlay">
+                              <p class="product-link__overlay-text">
                                  Технокряк это современная площадка
                                  распространения коронавируса. Компании
                                  используют эту платформу для цифрового шпионажа
@@ -195,22 +195,22 @@
                               </p>
                            </div>
                         </div>
-                        <div class="pattern-list__description">
-                           <h3 class="pattern-list__project">Проект Prime</h3>
-                           <p class="pattern-list__product">Маркетинг</p>
+                        <div class="product-link__description">
+                           <h3 class="product-link__project">Проект Prime</h3>
+                           <p class="product-link__article">Маркетинг</p>
                         </div>
                      </a>
                   </li>
                   <li class="pattern-list__item">
-                     <a class="pattern-list__link" href="">
-                        <div class="pattern-list__thumb">
+                     <a class="product-link" href="">
+                        <div class="product-link__thumb">
                            <img
                               src="./images/example5.jpg"
                               alt="boxes"
                               width="370"
                            />
-                           <div class="pattern-list__overlay">
-                              <p class="pattern-list__overlay-text">
+                           <div class="product-link__overlay">
+                              <p class="product-link__overlay-text">
                                  Технокряк это современная площадка
                                  распространения коронавируса. Компании
                                  используют эту платформу для цифрового шпионажа
@@ -218,22 +218,22 @@
                               </p>
                            </div>
                         </div>
-                        <div class="pattern-list__description">
-                           <h3 class="pattern-list__project">Проект Boxes</h3>
-                           <p class="pattern-list__product">Приложение</p>
+                        <div class="product-link__description">
+                           <h3 class="product-link__project">Проект Boxes</h3>
+                           <p class="product-link__article">Приложение</p>
                         </div>
                      </a>
                   </li>
                   <li class="pattern-list__item">
-                     <a class="pattern-list__link" href="">
-                        <div class="pattern-list__thumb">
+                     <a class="product-link" href="">
+                        <div class="product-link__thumb">
                            <img
                               src="./images/example6.jpg"
                               alt="desktop monitor "
                               width="370"
                            />
-                           <div class="pattern-list__overlay">
-                              <p class="pattern-list__overlay-text">
+                           <div class="product-link__overlay">
+                              <p class="product-link__overlay-text">
                                  Технокряк это современная площадка
                                  распространения коронавируса. Компании
                                  используют эту платформу для цифрового шпионажа
@@ -241,24 +241,24 @@
                               </p>
                            </div>
                         </div>
-                        <div class="pattern-list__description">
-                           <h3 class="pattern-list__project">
+                        <div class="product-link__description">
+                           <h3 class="product-link__project">
                               Inspiration has no Borders
                            </h3>
-                           <p class="pattern-list__product">Веб-сайт</p>
+                           <p class="product-link__article">Веб-сайт</p>
                         </div>
                      </a>
                   </li>
                   <li class="pattern-list__item">
-                     <a class="pattern-list__link" href="">
-                        <div class="pattern-list__thumb">
+                     <a class="product-link" href="">
+                        <div class="product-link__thumb">
                            <img
                               src="./images/example7.jpg"
                               alt="book"
                               width="370"
                            />
-                           <div class="pattern-list__overlay">
-                              <p class="pattern-list__overlay-text">
+                           <div class="product-link__overlay">
+                              <p class="product-link__overlay-text">
                                  Технокряк это современная площадка
                                  распространения коронавируса. Компании
                                  используют эту платформу для цифрового шпионажа
@@ -266,24 +266,24 @@
                               </p>
                            </div>
                         </div>
-                        <div class="pattern-list__description">
-                           <h3 class="pattern-list__project">
+                        <div class="product-link__description">
+                           <h3 class="product-link__project">
                               Издание Limited Edition
                            </h3>
-                           <p class="pattern-list__product">Дизайн</p>
+                           <p class="product-link__article">Дизайн</p>
                         </div>
                      </a>
                   </li>
                   <li class="pattern-list__item">
-                     <a class="pattern-list__link" href="">
-                        <div class="pattern-list__thumb">
+                     <a class="product-link" href="">
+                        <div class="product-link__thumb">
                            <img
                               src="./images/example8.jpg"
                               alt="tag"
                               width="370"
                            />
-                           <div class="pattern-list__overlay">
-                              <p class="pattern-list__overlay-text">
+                           <div class="product-link__overlay">
+                              <p class="product-link__overlay-text">
                                  Технокряк это современная площадка
                                  распространения коронавируса. Компании
                                  используют эту платформу для цифрового шпионажа
@@ -291,22 +291,22 @@
                               </p>
                            </div>
                         </div>
-                        <div class="pattern-list__description">
-                           <h3 class="pattern-list__project">Проект LAB</h3>
-                           <p class="pattern-list__product">Маркетинг</p>
+                        <div class="product-link__description">
+                           <h3 class="product-link__project">Проект LAB</h3>
+                           <p class="product-link__article">Маркетинг</p>
                         </div>
                      </a>
                   </li>
                   <li class="pattern-list__item">
-                     <a class="pattern-list__link" href="">
-                        <div class="pattern-list__thumb">
+                     <a class="product-link" href="">
+                        <div class="product-link__thumb">
                            <img
                               src="./images/example9.jpg"
                               alt="hands on laptop"
                               width="370"
                            />
-                           <div class="pattern-list__overlay">
-                              <p class="pattern-list__overlay-text">
+                           <div class="product-link__overlay">
+                              <p class="product-link__overlay-text">
                                  Технокряк это современная площадка
                                  распространения коронавируса. Компании
                                  используют эту платформу для цифрового шпионажа
@@ -314,11 +314,11 @@
                               </p>
                            </div>
                         </div>
-                        <div class="pattern-list__description">
-                           <h3 class="pattern-list__project">
+                        <div class="product-link__description">
+                           <h3 class="product-link__project">
                               Growing Business
                            </h3>
-                           <p class="pattern-list__product">Приложение</p>
+                           <p class="product-link__article">Приложение</p>
                         </div>
                      </a>
                   </li>
