--- a/index.html
+++ b/index.html
@@ -420,9 +420,11 @@
       <footer class="footer">
          <div class="container">
             <div class="logo-address">
-               <a class="logo logo--white" href=""
-                  ><span class="logo--blue">Web</span>Studio</a
-               >
+               <div class="logo-container">
+                  <a class="logo logo--white" href=""
+                     ><span class="logo--blue">Web</span>Studio</a
+                  >
+               </div>
 
                <!--address section footer-->
 
